<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="view"
            type="com.example.weatherapp.landing.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".landing.HomeFragment">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSearchCities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_cities"
            android:textAllCaps="false"
            android:onClick="@{view::onClick}"
            app:layout_constraintBottom_toTopOf="@+id/btnCurrentCity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCurrentCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_city"
            android:textAllCaps="false"
            android:onClick="@{view::onClick}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSearchCities" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>